--- a/Exercicios/Desafio008/index.html
+++ b/Exercicios/Desafio008/index.html
@@ -33,11 +33,11 @@
 
     <h2>Minhas especialidades</h2>
     <ul typer="circle" >
-        <li><img src="imagem2/python.png" alt="Python" width="35"> -  Pytron</li>
-        <li><img src="imagem2/java.png" alt="Java" width="35"> -  Java</li>
-        <li><img src="imagem2/html.webp" alt="HTML" width="35"> -  HTML</li>
-        <li> <img src="imagem2/css.webp" alt="CSS" width="35"> -  CSS</li>
-        <li> <img src="imagem2/sql.png" alt="MySQL" width="35"> -  MySQL</li> 
+        <li><img src="imagem2/python.png" alt="Python" width="35"> &oline;  Pytron</li>
+        <li><img src="imagem2/java.png" alt="Java" width="35"> &oline; Java</li>
+        <li><img src="imagem2/html.webp" alt="HTML" width="35"> &oline;  HTML</li>
+        <li> <img src="imagem2/css.webp" alt="CSS" width="35"> &oline; CSS</li>
+        <li> <img src="imagem2/sql.png" alt="MySQL" width="35"> &oline;  MySQL</li> 
     </ul>
 
     <h2>Educação</h2>
@@ -57,6 +57,8 @@
         <li><img src="imagem/what.jpg" alt="what" width="27"><a href="https://contate.me/joanaluz" target="_blank" rel="external">/joanaluz</a> - WhatdApp para contato </li>
         <li><img src="imagem/gmail.png" alt="gmail" width="25"><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" rel="external">/joanaluz</a> - Gmail para contato</li>
     </ul>
+    
+
 </main>
 </body>
 </html>
