--- a/Exercicios/Exercicio022/Fundo006.html
+++ b/Exercicios/Exercicio022/Fundo006.html
@@ -12,13 +12,16 @@
             background-color: black;
             background-image: url('imagem/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat ;
+            background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            /* shorthand background 
+            color > image > position > repeat > [SIZE] attachment */
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -32,9 +35,32 @@
         <h1>Teste de imagem de fundo 006 </h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus a repudiandae iste voluptas eligendi
             repellat, at perspiciatis, distinctio deleniti officia quo sed odit eius id error culpa voluptate.
-            Obcaecati, saepe.</p>
+            Obcaecati, saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt itaque laborum tempore,
+            officiis sapiente eius dolores dolorem ea, ex velit tempora expedita ipsa nam quos possimus praesentium
+            doloribus quae corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum at quaerat
+            fugit neque eveniet explicabo adipisci vitae, libero exercitationem voluptatem atque, quos quam aperiam eius
+            reiciendis facere fuga ad modi?</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam qui rem aperiam veniam error nesciunt
-            laboriosam aliquid ex illum voluptates nostrum amet, sit cumque ab odit magni? Tempora, illum natus.</p>
+            laboriosam aliquid ex illum voluptates nostrum amet, sit cumque ab odit magni? Tempora, illum natus. Lorem
+            ipsum dolor sit amet, consectetur adipisicing elit. Quis amet beatae facilis possimus illum animi, voluptas
+            distinctio delectus nam adipisci nostrum iusto aperiam voluptate iure necessitatibus non exercitationem iste
+            autem? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, a. Suscipit, blanditiis nemo? Vel
+            natus, fugiat eum deserunt, ut ipsa, dolor maxime ex temporibus reiciendis animi minus voluptate nam beatae?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab architecto dolores quasi ipsa voluptas ducimus
+            consequatur similique? Provident enim saepe illo minima dolorum. Porro mollitia molestiae iusto commodi
+            illum officia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium rerum dignissimos animi
+            nostrum, libero ad repellat quae, fugit alias numquam, tempore accusamus illum dolores voluptate illo
+            quidem? Incidunt, sed aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius sit
+            veritatis, asperiores temporibus atque doloribus, quos tempore ipsa accusamus itaque illum explicabo
+            voluptas corrupti id dolores illo suscipit, minima sed.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab architecto dolores quasi ipsa voluptas ducimus
+            consequatur similique? Provident enim saepe illo minima dolorum. Porro mollitia molestiae iusto commodi
+            illum officia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro corrupti suscipit nam eligendi
+            rerum commodi ab aspernatur soluta libero provident ipsum sed ipsa blanditiis, eos autem odio ratione
+            inventore dicta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam, perferendis
+            repudiandae, et deleniti sed magnam voluptates praesentium libero deserunt sunt. Aliquid nostrum ipsam
+            eligendi ab, recusandae architecto voluptatum nihil!</p>
     </main>
 </body>
 
