--- a/Exercicios/Desafio012/index.html
+++ b/Exercicios/Desafio012/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <herder>
+    <header>
         <h1>Cordel Moderno</h1>
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743"> Milton Duarte</a></p>
 
-    </herder>
+    </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -30,7 +30,7 @@
 
   
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -44,8 +44,8 @@
 
  
 
-    <section>
-        <P>
+    <section class="normal">
+        <p>
             Arroba agora não pesa<br>
             É parte de um endereço<br>
             Ponto final nem se usa<br>
@@ -60,13 +60,13 @@
             Um beijo significa<br>
             Pra entender como fica<br>
             Decifre esse rabisco.
-        </P>
+        </p>
     </section>
 
     
 
-    <section>
-        <P>
+    <section class="imagem">
+        <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
             Mandava no mês de Junho<br>
@@ -74,13 +74,13 @@
             Mas matava a saudade<br>
             Era texto de verdade<br>
             Nas linhas do coração.
-        </P>
+        </p>
     </section>
 
    
-<section>
+<section class="normal">
     
-        <P>
+        <p>
             Agora, escrevo e envio<br>
             Chegando na mesma hora<br>
             Mas quando vou prosear<br>
@@ -95,7 +95,7 @@
             Dois pontos são dois joelhos<br>
             Seus lábios são aparelhos<br>
             Deixe que Deus interprete.
-        </P>
+        </p>
 </section>
 
     <footer>
