--- a/Exercicios-modelo3/fundo006.html
+++ b/Exercicios-modelo3/fundo006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fundo fixo de tela</title>
     <link rel="stylesheet" href="fundo006.css">
 </head>
 <body>
