--- a/Exercicios-modelo3/ex023/tabela02.html
+++ b/Exercicios-modelo3/ex023/tabela02.html
@@ -19,21 +19,21 @@
         </thead>
         <tbody>
             <tr>  <td>sao paulo</td>
-          <td>45 5000</td></tr>
+          <td class="num">45 5000</td></tr>
           <tr>
             <td>Minas Gerais</td>
-            <td>21658000</td>
+            <td class="num">21658000</td>
           </tr>
           <tr>
             <td>Rio janeiro</td>
-            <td>30000</td>
+            <td class="num">30000</td>
           </tr>
         
           
         </tbody>
         <tfoot>
           <th>Total de Habitante</th>
-          <td><strong>0000</strong></td>
+          <td class="num"><strong>0000</strong></td>
         </tfoot>
     </table>
 </body>
