scope para identificação da tabela

--- a/Exercicios-modelo3/ex023/tabela02.html
+++ b/Exercicios-modelo3/ex023/tabela02.html
@@ -11,10 +11,11 @@
     <!-- Anatomia para tabelas Grandes  -->
 
     <table>
+      <caption> Populacao </caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>Populacao</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">Populacao</th>
             </tr>
         </thead>
         <tbody>
@@ -32,8 +33,8 @@
           
         </tbody>
         <tfoot>
-          <th>Total de Habitante</th>
-          <td class="num"><strong>0000</strong></td>
+          <th scope="row">Total de Habitante</th>
+          <td scope="row" class="num" ><strong>0000</strong></td>
         </tfoot>
     </table>
 </body>
