cabeçalho sticky fixo

--- a/Exercicios-modelo3/ex023/tabela02.html
+++ b/Exercicios-modelo3/ex023/tabela02.html
@@ -29,6 +29,68 @@
             <td>Rio janeiro</td>
             <td class="num">30000</td>
           </tr>
+          <tr>
+            <td>Rio janeiro</td>
+            <td class="num">30000</td>
+          </tr>
+          <tr>
+            <td>Rio janeiro</td>
+            <td class="num">30000</td>
+          </tr>
+          <tr>
+            <td>Rio janeiro</td>
+            <td class="num">30000</td>
+          </tr>
+                <tr>  <td>sao paulo</td>
+          <td class="num">45 5000</td></tr>
+          <tr>
+            <td>Minas Gerais</td>
+            <td class="num">21658000</td>
+          </tr>
+          <tr>
+            <td>Rio janeiro</td>
+            <td class="num">30000</td>
+          </tr>
+                <tr>  <td>sao paulo</td>
+          <td class="num">45 5000</td></tr>
+          <tr>
+            <td>Minas Gerais</td>
+            <td class="num">21658000</td>
+          </tr>
+          <tr>
+            <td>Rio janeiro</td>
+            <td class="num">30000</td>
+          </tr>
+                <tr>  <td>sao paulo</td>
+          <td class="num">45 5000</td></tr>
+          <tr>
+            <td>Minas Gerais</td>
+            <td class="num">21658000</td>
+          </tr>
+          <tr>
+            <td>Rio janeiro</td>
+            <td class="num">30000</td>
+          </tr>
+                <tr>  <td>sao paulo</td>
+          <td class="num">45 5000</td></tr>
+          <tr>
+            <td>Minas Gerais</td>
+            <td class="num">21658000</td>
+          </tr>
+          <tr>
+            <td>Rio janeiro</td>
+            <td class="num">30000</td>
+          </tr>
+                <tr>  <td>sao paulo</td>
+          <td class="num">45 5000</td></tr>
+          <tr>
+            <td>Minas Gerais</td>
+            <td class="num">21658000</td>
+          </tr>
+          <tr>
+            <td>Rio janeiro</td>
+            <td class="num">30000</td>
+          </tr>
         
           
         </tbody>
