--- a/Exercicios-modelo3/ex023/desafio004.html
+++ b/Exercicios-modelo3/ex023/desafio004.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="desafio004.css" />
   </head>
   <body>
-    <table border="1">
+    <table >
       <thead>
         <th class="principal" rowspan="2">Area</th>
         <th class="principal" rowspan="2">Disciplinas</th>
