tabelas  com grupos

--- a/Exercicios-modelo3/ex023/tabela005.html
+++ b/Exercicios-modelo3/ex023/tabela005.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title> Tabelas</title>
+    <link rel="stylesheet" href="tabelas005.css">
 </head>
 <body>
-    
+    <table>
+        <colgroup>
+             <col class="cnome">
+            <col class="cgrupo" span="2">
+            
+            <col class="cprof">
+        </colgroup>
+        <caption>Cadastro</caption>
+        <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Sexo</th>
+            <th scope="col">Idade</th>
+            <th scope="col">Profissão</th>
+        </tr>
+        <tr>
+            <td>silva</td>
+            <td>f</td>
+            <td>25</td>
+            <td>vendedora</td>
+        </tr>
+           <tr>
+            <td>Betina</td>
+            <td>f</td>
+            <td>18</td>
+            <td>frontend</td>
+        </tr>
+           <tr>
+            <td>suelen</td>
+            <td>f</td>
+            <td>15</td>
+            <td>Atendente</td>
+        </tr>
+           <tr class="destaque">
+            <td >batista</td>
+            <td>f</td>
+            <td>45</td>
+            <td>fotografa</td>
+        </tr>
+           <tr>
+            <td>Maria</td>
+            <td>f</td>
+            <td>29</td>
+            <td>caixa</td>
+        </tr>
+    </table>
 </body>
 </html>
