--- a/Modulo4-html-css/Exercicio/iframe.html
+++ b/Modulo4-html-css/Exercicio/iframe.html
@@ -6,7 +6,19 @@
     <title>Estudos de Iframe</title>
 </head>
 <body>
-    <h1>Testtando  uso de iframe</h1>
-    <p>Acessando o site d Curso em Video para aprender a programar </p>
+    <h1>Testando  uso de iframe</h1>
+    <p>Acessando o site d 
+        <!-- Tamanho padrão 300x150 -->
+        <iframe src="https://www.cursoemvideo.com" frameborder="0">
+
+        </iframe>
+        
+        para aprender a programar </p>
+
+        <p>
+            O site 
+
+            <iframe src="https://joanabnu.github.io/churrascariadofaustao/" frameborder="0" height="500" width="800"> no <a href="https://joanabnu.github.io/churrascariadofaustao/" target="_blank"></a>Github</a>  </iframe> é daora
+        </p>
 </body>
 </html>
